[package]
name = "siyuan_launcher"
version = "0.1.0"
edition = "2021"

# as win gui
[[bin]]
name = "siyuan_launcher"
path = "src/main.rs"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "shellapi"] }

# static linking msvc lib
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'      # halt when panic
strip = true